--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="./smesharik-test.jpg" alt="smeshariki">
+    <img src="./smesharik-test.jpg" alt="smeshariki test">
 </body>
 
 </html>
